Added Trip Controller code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=the-bugfest-club
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/bug_fest
 spring.datasource.username=bug_fest
-spring.datasource.password=Hari@1983
+spring.datasource.password=Aishu$1989
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
