--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.3.3.RELEASE'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
 }
 
 
