Added login files to branch of main. Gradle not showing up in my IntelliJ.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,18 @@ spring.jpa.hibernate.ddl-auto=update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Session Management Configuration
+spring.security.filter.chain.content-negotiation.parameter-strategy=ignore
+spring.security.filter.chain.any-request.authorized=permitAll
+spring.security.filter.chain.request-matcher.path.pattern=/api/**
+spring.security.filter.chain.request-matcher.path.authenticated=true
+# CSRF Configuration
+spring.security.csrf.disabled=true
+# CORS Configuration
+spring.security.cors.configurationSource.allowedOrigins=http://localhost:3000
+spring.security.cors.configurationSource.allowedMethods=*
+spring.security.cors.configurationSource.allowedHeaders=*
+spring.security.cors.configurationSource.allowCredentials=true
+spring.security.cors.configurationSource.exposedHeaders=Authorization
+spring.security.cors.configurationSource.maxAge=3600
