--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.3.3.RELEASE'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
 }
 
 tasks.named('test') {
