--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=the-bugfest-club
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/bug_fest
-spring.datasource.username=bug_fest
-spring.datasource.password=Aishu$1989
+spring.datasource.url=jdbc:mysql://localhost:3306/bugfest
+spring.datasource.username=bugfest
+spring.datasource.password=bugfest
 # Specify the DBMS
 spring.jpa.database=MYSQL
 # Show or not log for each sql query
