--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/bug_fest?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
@@ -18,8 +17,8 @@ spring:
       client:
         registration:
           google:
-            clientId: ${GOOGLE_OAUTH_CLIENT_ID}
-            clientSecret: ${GOOGLE_OAUTH_CLIENT_SECRET}
+            clientId: 765110328699-ng14946vbfsu1pac8eiq36soej71cmuc.apps.googleusercontent.com
+            clientSecret: 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
             redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
             scope:
               - email
@@ -45,7 +44,7 @@ spring:
             userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
 app:
   auth:
-    tokenSecret: ${TOKEN_SECRET}
+    tokenSecret: ${SECRET_TOKEN}
     tokenExpirationMsec: 864000000
   cors:
     allowedOrigins: http://localhost:5173,http://localhost:8080
