--- a/openai-server/package.json
+++ b/openai-server/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "openai": "^4.90.0"
+    "express": "^4.21.2",
+    "openai": "^4.94.0"
   }
 }
