--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,8 +2,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/bug_fest?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-    username: ${MY_SQL_USER}
-    password: ${MY_SQL_SECRET}
+    username: bug_fest
+    password: Aishu$1989
 
   jpa:
     show-sql: true
@@ -13,6 +13,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+
   security:
     oauth2:
       client:
@@ -50,11 +51,5 @@ app:
   cors:
     allowedOrigins: http://localhost:5173,http://localhost:8080
   oauth2:
-    # After successfully authenticating with the OAuth2 Provider,
-    # we'll be generating an auth token for the user and sending the token to the
-    # redirectUri mentioned by the client in the /oauth2/authorize request.
-    # We're not using cookies because they won't work well in mobile clients.
     authorizedRedirectUris:
       - http://localhost:5173/oauth2/redirect
-      - myandroidapp://oauth2/redirect
-      - myiosapp://oauth2/redirect
